--- a/values.yaml
+++ b/values.yaml
@@ -4,43 +4,22 @@
 
 replicaCount: 1
 
-image:
+frontendImage:
+  name: nginx
+  repository: nginx
+  tag: latest
+  pullPolicy: IfNotPresent
+
+backendImage:
+  name: littlesuave
   repository: dcurylo/littlesuave
   tag: latest
   pullPolicy: IfNotPresent
 
-nginxService:
+frontendService:
   name: nginx
   type: NodePort
   port: 80
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  path: /api
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
