--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -46,7 +46,12 @@ spec:
           volumeMounts:
             - name: nginx-config
               mountPath: /etc/nginx/
+            - name: nginx-content
+              mountPath: /usr/share/nginx/html
       volumes:
       - name: nginx-config
         configMap: 
-          name: {{ template "nginx-suave.fullname" . }}
+          name: {{ template "nginx-suave.fullname" . }}-conf
+      - name: nginx-content
+        configMap: 
+          name: {{ template "nginx-suave.fullname" . }}-content
